# GitLab-Task-Scheduler

./: .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  load_markdown_template.py  pyproject.toml  template.env
.github/workflows/: main.yml
.gitlab/schedule_templates/: 2min-template.md  daily-template.md
src/gitlabtaskscheduler/: __init__.py  __main__.py
